added photo and description to sandwich.html

--- a/recipes/sandwich.html
+++ b/recipes/sandwich.html
@@ -8,5 +8,7 @@
 
     <body>
         <h1>Sandwich</h1>
+        <img src="https://media.lv12.com.ar/p/aec48b14557ee6dca5fb050a1392a4b6/adjuntos/261/imagenes/001/368/0001368205/imagepng.png" alt="a sanguche de milanesa">
+        <p>a sandwich of milanesa is a typical tucuman food, where we put a milanesa(a steak covered by pan rallado) between two buns, over this milanesa we put lettuce, tomato slices, mayo, mustard, hot chili sauce and fried or not onions</p>
     </body>
 </html>
