added first entire recipe, sandwich, with ingredients and steps

--- a/recipes/sandwich.html
+++ b/recipes/sandwich.html
@@ -9,6 +9,31 @@
     <body>
         <h1>Sandwich</h1>
         <img src="https://media.lv12.com.ar/p/aec48b14557ee6dca5fb050a1392a4b6/adjuntos/261/imagenes/001/368/0001368205/imagepng.png" alt="a sanguche de milanesa">
-        <p>a sandwich of milanesa is a typical tucuman food, where we put a milanesa(a steak covered by pan rallado) between two buns, over this milanesa we put lettuce, tomato slices, mayo, mustard, hot chili sauce and fried or not onions</p>
+        <p>a sandwich of milanesa is a typical tucuman food, where we put a milanesa(a steak covered by pan rallado) between a piece of bread sliced in two, over this milanesa we put different vegetables and dressings</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>bread</li>
+            <li>one or two milanesas</li>
+            <li>lettuce</li>
+            <li>a tomato</li>
+            <li>onions</li>
+            <li>mayo</li>
+            <li>mustard</li>
+            <li>hot chili sauce</li>
+        </ul>
+        <h4>optional</h4>
+        <ul>
+            <li>one or two eggs</li>
+            <li>ham</li>
+            <li>cheese</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>cook the milanesa</li>
+            <li>if we want "el especial" add <em>(cooked)</em> eggs ham and cheese</li>
+            <li>slice bread in two and place the milanesa between the two slices</li>
+            <li>place lettuce first, then tomato slices, fried onions and dressings</li>
+            <li>cut in half and setup in plate</li>
+        </ol>
     </body>
 </html>
