--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/sandwich.html">Sandwich</a>
+        <ul>
+            <li><a href="recipes/sandwich.html">Sandwich</a></li>
+            <li><a href="recipes/burger.html"></a></li>
+            <li><a href="recipes/pizza.html"></a></li>
+        </ul>
     </body>
 </html>
