--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-            <li><a href="recipes/sandwich.html">Sandwich</a></li>
-            <li><a href="recipes/burger.html"></a></li>
-            <li><a href="recipes/pizza.html"></a></li>
+            <li><a href="recipes/sandwich.html">Sandwich recipe</a></li>
+            <li><a href="recipes/burger.html">Burger recipe</a></li>
+            <li><a href="recipes/pizza.html">Pizza recipe</a></li>
         </ul>
     </body>
 </html>
