added black background text in homepage, resized images so they are not extremely big for standard screens, added anchor at the end of each recipe page to come back to the home screen, added background colors to each ingredient and step lists.

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <head>
         <meta charset="utf-8">
         <title>Odin recipes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
         <h1>Odin Recipes</h1>
-        <ul>
+        <p class="descriptor">Down below you can find the recipes that we have available in this website</p>
+        <ul class="links">
             <li><a href="recipes/sandwich.html">Sandwich recipe</a></li>
             <li><a href="recipes/burger.html">Burger recipe</a></li>
             <li><a href="recipes/pizza.html">Pizza recipe</a></li>
