--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>Burger recipe</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
@@ -11,7 +12,7 @@
         <img src="https://assets.epicurious.com/photos/5c745a108918ee7ab68daf79/5:4/w_3129,h_2503,c_limit/Smashburger-recipe-120219.jpg" alt="a burger">
         <p>A patty with vegetables between a sliced bun</p>
         <h2>Ingredients</h2>
-        <ul>
+        <ul class="ingredients">
             <li>patty</li>
             <li>bun</li>
             <li>tomato</li>
@@ -19,11 +20,12 @@
             <li>cheddar cheese slice</li>
         </ul>
         <h2>Steps</h2>
-        <ol>
+        <ol class="steps">
             <li>cook paty and buns a little bit</li>
-            <li>put cooked cheddar cheese slice over patty while it is cooking</li>
+            <li>put cheddar cheese slice over patty while it is cooking</li>
             <li>put patty with cheese over sliced bun</li>
             <li>setup vegetables over patty</li>
         </ol>
+        <a href="../index.html" class="home">go to homepage</a>
     </body>
 </html>
