--- a/recipes/sandwich.html
+++ b/recipes/sandwich.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>Sandwich recipe</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
@@ -11,7 +12,7 @@
         <img src="https://media.lv12.com.ar/p/aec48b14557ee6dca5fb050a1392a4b6/adjuntos/261/imagenes/001/368/0001368205/imagepng.png" alt="a sanguche de milanesa">
         <p>a sandwich of milanesa is a typical tucuman food, where we put a milanesa(a steak covered by pan rallado) between a piece of bread sliced in two, over this milanesa we put different vegetables and dressings</p>
         <h2>Ingredients</h2>
-        <ul>
+        <ul class="ingredients">
             <li>bread</li>
             <li>one or two milanesas</li>
             <li>lettuce</li>
@@ -22,18 +23,19 @@
             <li>hot chili sauce</li>
         </ul>
         <h4>optional</h4>
-        <ul>
+        <ul class="ingredients">
             <li>one or two eggs</li>
             <li>ham</li>
             <li>cheese</li>
         </ul>
         <h2>Steps</h2>
-        <ol>
+        <ol class="steps">
             <li>cook the milanesa</li>
             <li>if we want "el especial" add <em>(cooked)</em> eggs ham and cheese</li>
             <li>slice bread in two and place the milanesa between the two slices</li>
             <li>place lettuce first, then tomato slices, fried onions and dressings</li>
             <li>cut in half and setup in plate</li>
         </ol>
+        <a href="../index.html" class="home">go to homepage</a>
     </body>
 </html>
